Release 2.6.1 - ???

   * Fix bug that prevented digests when the fallback/EmptyParser
     was called (TIKA-3939).

   * Remove log4j 1.2.x (and slf4j-log4j12 which now redirects to slf4j-reload4j) from
     all modules (TIKA-3935).

   * Add SVG detection for svg files lacking the xml header (TIKA-3308).

   * Upgrade to Bouncy Castle 1.71 and jdk18on jars (TIKA-3933).

   * Add a JDBCPipesReporter (TIKA-3931).

   * Add multivalued field strategy option in jdbc-emitter (TIKA-3930).
     Default is now 'concatenate' with ', ' as the delimiter.

   * Downgrade logging in PipesClient for each parse from info to debug.

Release 2.6.0 - 11/3/2022

   * Add optional Siegfried detector (TIKA-3901).

   * Move OverrideDetector's functionality to the CompositeDetector (TIKA-3904).

   * The FileCommandDetector has been refactored to have the same
     behavior as the Siegfried detector; see setUseMime in the javadoc (TIKA-3902).

   * Fix bug in OpenSearch emitter that prevented upserts on
     documents with embedded files (TIKA-3882).

   * Extract PDF actions and triggers into the file's metadata (TIKA-3887).

   * Add a tika-async-cli module (TIKA-3885).

   * Fetch keys sent via headers to tika server are now URL decoded (TIKA-3864).


Release 2.5.0 - 09/30/2022

   * Improved extraction of PDF subset info for PDF/UA, PDF/VT, and PDF/X.
     NOTE: we no longer append PDF/A information, e.g. 'version="A-1b"'
     to the 'dc:format'. Users must now get that information from the
     'pdfa:PDFVersion' key or from 'pdfaid:conformance'
     and 'pdfaid:part' (TIKA-3844).

   * Avoid infinite loop in bookmark extraction from PDFs (TIKA-3832).

   * Upgraded to slf4j 2.0.1 (TIKA-3842).

   * Added upsert option for the OpenSearch emitter (TIKA-3855).

   * Extract PDF signature information at the document level
     into the metadata (TIKA-3852).

   * Enable configuration of digests via AutoDetectParserConfig (TIKA-3853).
